# tfidf-competitor-analysis

./: .gitignore  .replit  app.py  keyword_analyzer.py  pnpm-lock.yaml  processor.py  product_detector.py  pyproject.toml  replit.md  requirements.txt  scraper.py  translator.py
.html_cache/: html_cache.json
.streamlit/: config.toml
artifacts/tfidf-tool/: index.html  package.json
artifacts/tfidf-tool/.replit-artifact/: artifact.toml
attached_assets/: Pasted-women-s-ski-fleece-100-00-C-0-A-0-women-s-fleece-100-00_1773932084145.txt  product_detector_1774620376791.txt  table_product_listin_1774621308753.txt  variation_counter_1773915951011.py
