[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "TF-IDF Competitor Analysis Tool"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.54.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "scikit-learn>=1.4.0",
    "nltk>=3.8.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "pandas>=2.1.0",
    "plotly>=5.19.0",
    "firecrawl-py>=4.18.0",
]
